--- a/Accessing Datacube and Calculating Indices.ipynb
+++ b/Accessing Datacube and Calculating Indices.ipynb
@@ -14,7 +14,7 @@
    "id": "20c982ec-e2d6-43c2-b577-46c9b0fb5888",
    "metadata": {},
    "source": [
-    "Just run the ### cells to avoid Kernel restarting because plotting  <br /> \n",
+    "The ### indicate the necessary cells to avoid Kernel restarting  <br /> \n",
     "Use section [Change and Tendency Maps](#change) for analysis, it loads the data after running the notebook once.\n",
     "#### load_data\n",
     "Load data section"
