--- a/Accessing Datacube and Calculating Indices.ipynb
+++ b/Accessing Datacube and Calculating Indices.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Impacts of Cyclone Alfred on Gold Coast\n",
-    "## Main Processi Over Sentinel-2C Data Cube"
+    "## Main Processing Using Sentinel-2C Data Cube"
    ]
   },
   {
@@ -237,7 +237,7 @@
    "outputs": [],
    "source": [
     "###\n",
-    "# Create a query object containing parameters used to search for and load Sentinel-2 data\n",
+    "# Create a query object containing parameters used to search and load Sentinel-2 data\n",
     "query = {\n",
     "    \"x\": nlon_range,\n",
     "    \"y\": nlat_range,\n",
