--- a/Field and Raster Data Extraction.ipynb
+++ b/Field and Raster Data Extraction.ipynb
@@ -6,7 +6,7 @@
    "metadata": {},
    "source": [
     "# Field and Raster Data Comparison\n",
-    "#'''''''''' Indicates necessary cells"
+    "'''''''''' Indicates necessary cells"
    ]
   },
   {
